--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ function resetAutoSlide() {
   
   <!-- Call to Action -->  <section class="cta">
     <h2>Ready to Start Your Project?</h2>
-    <a href="#contact" class="btn-primary">Get in Touch</a>
+    <a href="contact.html" class="btn-primary">Get in Touch</a>
   </section>
   
 <section class="counters">
