--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ nav a:last-child{
     <div class="hero-content">
       <h1>Transform Your Space with Elegant Design</h1>
       <p>We bring your interior dreams to life with timeless style and functional beauty.</p>
-      <a href="#portfolio" class="btn-primary">View Portfolio</a>
+      <a href="portfolio.html" class="btn-primary">View Portfolio</a>
     </div>
   </section>  <!-- About Preview -->  <section class="about-preview">
     <h2>About Us</h2>
