--- a/portfolio.html
+++ b/portfolio.html
@@ -448,8 +448,9 @@ nav a:last-child{
   <section class="cta">
   <h2>Transform Your Workspace with Elegance</h2>
   <p>Bring your vision to life with tailored design solutions rooted in calm, clarity, and sophistication.</p>
+  <a href="contact.html">
   <button class="cta-btn">Request a Consultation</button>
-  
+</a>
   <style>
 /* Call to Action */
 .cta {
